# AI-Agent-with-Tool-Calling

./: .gitignore  README.md  main.py  pyproject.toml  railway.toml  render.yaml  requirements.txt
frontend/: app.py
src/: agent.py  tools.py
tests/: test_agent.py
