[project]
name = "ai-agent-with-tool-calling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=2.13.0",
    "groq>=1.5.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.60.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.7.4",
]
